--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
                 <a href="#" class="text-2xl font-bold text-indigo-600">MójSklep</a>
                 <nav class="space-x-6 text-gray-700 hidden md:flex">
                     <a href="/" class="hover:text-indigo-600 transition">Home</a>
-                    <a href="/product" class="hover:text-indigo-600 transition">Produkty</a>
+                    <a href="/products" class="hover:text-indigo-600 transition">Produkty</a>
                     <a href="/about" class="hover:text-indigo-600 transition">O nas</a>
                     <a href="/cart" class="hover:text-indigo-600 transition">Koszyk</a>
                 </nav>
