--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -18,7 +18,7 @@
                     {% for category in categories %}
                     {% set selectedClass = app.request.get('category') == category.slug ? 'font-bold' : '' %}
                     <li>
-                        <a href="/product?category={{ category.slug }}" class="hover:underline {{ selectedClass }}">{{ category.name }}</a>
+                        <a href="/products?category={{ category.slug }}" class="hover:underline {{ selectedClass }}">{{ category.name }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -29,22 +29,26 @@
                 <div class="columns-1 sm:columns-2 md:columns-3 gap-4 space-y-4">
                     {% for product in products %}
                         <div class="break-inside-avoid bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition mb-4 flex flex-col">
-                            <img src="{{ product.thumbnail }}" alt="{{ product.title }}" class="w-full h-48 object-contain" />
-                            <div class="p-4 flex flex-col flex-grow">
-                                <div class="flex justify-between items-center mb-3">
-                                    <h3 class="text-lg font-semibold">{{ product.title }}</h3>
-                                    <p class="text-indigo-600 font-bold text-xl">{{ product.price }} zł</p>
+                            <a class="hover:text-indigo-700" href="/product/{{ product.id }}">
+                                <img src="{{ product.thumbnail }}" alt="{{ product.title }}" class="w-full h-48 object-contain" />
+                                <div class="p-4 flex flex-col flex-grow">
+                                    <div class="flex justify-between items-center mb-3">
+                                        <h3 class="text-lg font-semibold">
+                                            {{ product.title }}
+                                        </h3>
+                                        <p class="text-indigo-600 font-bold text-xl">{{ product.price }} zł</p>
+                                    </div>
+                                    <div class="flex justify-between items-center mb-4">
+                                        <p class="text-yellow-500 font-semibold">Rating: {{ product.rating }} ★</p>
+                                        <p class="inline-block bg-red-500 text-white text-xs font-bold px-2 py-1 rounded">
+                                            Discount: {{ product.discountPercentage }}%
+                                        </p>
+                                    </div>
                                 </div>
-                                <div class="flex justify-between items-center mb-4">
-                                    <p class="text-yellow-500 font-semibold">Rating: {{ product.rating }} ★</p>
-                                    <p class="inline-block bg-red-500 text-white text-xs font-bold px-2 py-1 rounded">
-                                        Discount: {{ product.discountPercentage }}%
-                                    </p>
-                                </div>
-                                <button class="mt-auto w-full bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition">
-                                    Dodaj do koszyka
-                                </button>
-                            </div>
+                            </a>
+                            <button type="button" class="mt-auto w-full bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
+                                Dodaj do koszyka
+                            </button>
                         </div>
                     {% else %}
                         <p class="text-center text-gray-500">Brak produktów do wyświetlenia.</p>
